// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triplify examples Alice.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/Alice.md> dot:wikipath \\"Alice.md\\" ;
	schema:name \\"Alice\\" ;
	a dot:Note ;
	dot:contains [
		dot:wikipath \\"Alice.md\\" ;
		schema:name \\"Alice\\" ;
		dot:selector \\"Alice\\" ;
		rdf:type dot:Block, <http://example.org/note/Person.md> ;
		dot:related [
			dot:wikipath \\"Ice cream\\" ;
		] ;
	] .

<http://example.org/note/Person.md> schema:name \\"Person\\" .

"
`;

exports[`triplify examples People.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/People.md> dot:wikipath \\"People.md\\" ;
	schema:name \\"People\\" ;
	a dot:Note ;
	dot:contains [
		dot:wikipath \\"People.md\\" ;
		schema:name \\"People\\" ;
		dot:selector \\"People\\" ;
		rdf:type dot:Block ;
		dot:contains <http://example.org/note/People.md/alice>, <http://example.org/note/People.md/alison> ;
	] .

<http://example.org/note/People.md/alice> dot:wikipath \\"People.md\\" ;
	schema:name \\"Alice\\" ;
	dot:selector \\"Alice\\" ;
	a dot:Block ;
	<http://example.org/property/foaf:knows> <http://example.org/note/People.md/alison> .

<http://example.org/property/foaf:knows> schema:name \\"foaf:knows\\" .

<http://example.org/note/People.md/alison> dot:wikipath \\"People.md\\" ;
	schema:name \\"Alison\\" ;
	dot:selector \\"Alison\\" ;
	a dot:Block ;
	<http://example.org/property/foaf:knows> <http://example.org/note/People.md/alice> .

"
`;

exports[`triplify examples Person.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/Person.md> dot:wikipath \\"Person.md\\" ;
	schema:name \\"Person\\" ;
	a dot:Note ;
	dot:contains [
		dot:wikipath \\"Person.md\\" ;
		schema:name \\"Person\\" ;
		dot:selector \\"Person\\" ;
		rdf:type dot:Block ;
		dot:contains <http://example.org/note/Person.md/named>, [
			dot:wikipath \\"Person.md\\" ;
			schema:name \\"Subsection\\" ;
			dot:selector \\"Subsection\\" ;
			rdf:type dot:Block ;
			<http://example.org/property/property> \\"C\\" ;
		], [
			dot:wikipath \\"Person.md\\" ;
			schema:name \\"Subsection\\" ;
			dot:selector \\"Subsection\\" ;
			rdf:type dot:Block ;
			<http://example.org/property/property> \\"B\\" ;
			dot:tag \\"person\\" ;
		] ;
		<http://example.org/property/description> \\"the class of persons\\" ;
	] .

<http://example.org/property/description> schema:name \\"description\\" .

<http://example.org/note/Person.md/named> dot:wikipath \\"Person.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	<http://example.org/property/property> \\"A\\" .

<http://example.org/property/property> schema:name \\"property\\" .

"
`;

exports[`triplify examples T2.canvas 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

_:b10 schema:description \\"\\"\\"## Alice

\\"\\"\\" ;
	<http://example.org/property/undefined> _:b11 .

_:b11 schema:description \\"## Ice cream\\" .

<http://example.org/property/undefined> schema:name \\"undefined\\" .

<http://example.org/note/T2.canvas> dot:contains [
		schema:description \\"## Bob\\" ;
		<http://example.org/property/undefined> _:b10, _:b12 ;
	], _:b10, _:b11 ;
	schema:name \\"T2.canvas\\" .

"
`;

exports[`triplify examples Test Canvas.canvas 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:friends schema:name \\"ex:friends\\" ;
	dot:contains <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md> ;
	<http://example.org/property/Same%20as> <http://example.org/note/Person.md> .

<http://example.org/note/bob/Bob.md> schema:name \\"Bob\\" ;
	dot:wikipath \\"bob/Bob.md\\" ;
	ex:details <http://example.org/note/bob/Bob%20Details.md> ;
	<http://example.org/property/lives%20in> <http://example.org/note/houses/BobHouse.md> ;
	<http://example.org/property/drew> <http://example.org/note/houses/img.png> .

<http://example.org/note/houses/BobHouse.md> schema:name \\"BobHouse\\" ;
	dot:wikipath \\"houses/BobHouse.md\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:wikipath \\"Alice.md\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" ;
	dot:wikipath \\"Person.md\\" .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" ;
	dot:wikipath \\"bob/Bob Details.md\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" ;
	dot:wikipath \\"houses/img.png\\" .

<http://example.org/property/Same%20as> schema:name \\"Same as\\" .

<http://example.org/property/lives%20in> schema:name \\"lives in\\" .

<http://example.org/property/drew> schema:name \\"drew\\" .

<http://example.org/note/Test%20Canvas.canvas> schema:name \\"Test Canvas.canvas\\" ;
	dot:contains [
		schema:name \\"Entities\\" ;
		dot:contains ex:friends, <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md>, <http://example.org/note/Person.md>, <http://example.org/note/bob/Bob%20Details.md> ;
	], <http://example.org/note/houses/BobHouse.md>, [
		schema:name \\"Resources\\" ;
		dot:contains <http://example.org/note/houses/img.png> ;
	] .

"
`;

exports[`triplify examples Yaml.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/Yaml.md> dot:wikipath \\"Yaml.md\\" ;
	dot:tag \\"cats\\", \\"dogs\\" ;
	<http://example.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://example.org/property/togs> \\"cats\\", \\"dogs\\" ;
	<http://example.org/property/one> \\"pepe\\", \\"carlos\\" ;
	<http://example.org/property/an-uri> <http://some-uri.com> ;
	<http://example.org/property/hello> \\"world\\" ;
	a dot:Note ;
	schema:name \\"Yaml\\" .

<http://example.org/property/date%20updated> schema:name \\"date updated\\" .

<http://example.org/property/togs> schema:name \\"togs\\" .

<http://example.org/property/one> schema:name \\"one\\" .

<http://example.org/property/an-uri> schema:name \\"an-uri\\" .

<http://example.org/property/hello> schema:name \\"hello\\" .

"
`;

exports[`triplify examples bob/Bob Details.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/bob/Bob%20Details.md> dot:wikipath \\"bob/Bob Details.md\\", \\"Bob Details\\" ;
	schema:name \\" Pointer to section 3\\" ;
	dot:selector \\"^3 \\" ;
	a dot:Note ;
	dot:contains [
		dot:wikipath \\"bob/Bob Details.md\\" ;
		schema:name \\"More details about Bob\\" ;
		dot:selector \\"More details about Bob\\" ;
		rdf:type dot:Block ;
		dot:contains <http://example.org/note/bob/Bob%20Details.md/1>, <http://example.org/note/bob/Bob%20Details.md/2>, <http://example.org/note/bob/Bob%20Details.md/3> ;
	] .

<http://example.org/note/bob/Bob%20Details.md/1> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	<http://example.org/property/description> \\"Section 1\\" ;
	<http://example.org/property/somewhat%20related> <http://example.org/note/bob/Bob%20Details.md> ;
	<http://example.org/property/points%20to%20the%20document> <http://example.org/note/bob/Bob%20Details.md> .

<http://example.org/property/description> schema:name \\"description\\" .

<http://example.org/property/somewhat%20related> schema:name \\"somewhat related\\" .

<http://example.org/property/points%20to%20the%20document> schema:name \\"points to the document\\" .

<http://example.org/note/bob/Bob%20Details.md/2> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	<http://example.org/property/description> \\"Section 2\\" ;
	dot:related <http://example.org/note/bob/Bob%20Details.md> .

<http://example.org/note/bob/Bob%20Details.md/3> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	<http://example.org/property/description> \\"Section 3\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] .

"
`;

exports[`triplify examples bob/Bob.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/bob/Bob.md> dot:wikipath \\"bob/Bob.md\\" ;
	<http://example.org/property/with%20image> <http://example.org/note/houses/img.png> ;
	dot:related [
		dot:wikipath \\"Link\\" ;
	] ;
	<http://example.org/property/lives%20in> <http://example.org/note/houses/BobHouse.md> ;
	<http://example.org/property/has%20details> <http://example.org/note/bob/Bob%20Details.md> ;
	ex:knows <http://example.org/note/Alice.md> ;
	<http://example.org/property/has%20image%201> <http://example.org/note/houses/img.png> ;
	a <http://example.org/note/Person.md>, dot:Note ;
	dot:external <http://something.com> ;
	schema:name \\"Bob\\" .

<http://example.org/property/with%20image> schema:name \\"with image\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" .

<http://example.org/property/lives%20in> schema:name \\"lives in\\" .

<http://example.org/note/houses/BobHouse.md> schema:name \\"BobHouse\\" .

<http://example.org/property/has%20details> schema:name \\"has details\\" .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" .

<http://example.org/property/has%20image%201> schema:name \\"has image 1\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" .

"
`;

exports[`triplify examples bob/links.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/bob/links.md> dot:wikipath \\"bob/links.md\\", \\"links\\" ;
	schema:name \\"links\\" ;
	dot:selector \\"Alias\\" ;
	a dot:Note ;
	dot:contains [
		dot:wikipath \\"bob/links.md\\" ;
		schema:name \\"Links\\" ;
		dot:selector \\"Links\\" ;
		rdf:type dot:Block ;
		dot:contains [
			dot:wikipath \\"bob/links.md\\" ;
			schema:name \\"Produce two simple links\\" ;
			dot:selector \\"Produce two simple links\\" ;
			rdf:type dot:Block ;
			dot:external <http://web1.org>, <http://web2.org> ;
		], _:b29, [
			dot:wikipath \\"bob/links.md\\" ;
			schema:name \\"More data\\" ;
			dot:selector \\"More data\\" ;
			rdf:type dot:Block ;
			dot:external <http://example.com>, <http://example2.com>, <http://example3.com> ;
			dot:related <http://example.org/note/bob/links.md>, _:b29, <http://example.org/note/houses/img.png>, <http://example.org/note/dot%20triples.md>, <http://example.org/note/bob/Bob%20Details.md>, [
				dot:wikipath \\"link 1 \\" ;
				schema:name \\"Alias 1\\" ;
			], [
				dot:wikipath \\"link 1\\" ;
			], [
				dot:wikipath \\"protocol\\" ;
				schema:name \\"here\\" ;
			] ;
			<http://example.org/property/has%20image> <http://example.org/note/houses/img.png> ;
		] ;
	] .

_:b29 dot:wikipath \\"bob/links.md\\" ;
	schema:name \\"Alias\\" ;
	dot:selector \\"Alias\\" ;
	a dot:Block ;
	dot:external <https://www.rand.org/content/dam/rand/pubs/papers/2008/P899.pdf> .

<https://www.rand.org/content/dam/rand/pubs/papers/2008/P899.pdf> schema:name \\"1954\\" .

<http://example.org/property/has%20image> schema:name \\"has image\\" .

<http://example.org/note/houses/img.png> dot:wikipath \\"img.png\\" ;
	schema:name \\"img.png\\" .

<http://example.org/note/dot%20triples.md> dot:wikipath \\"dot triples\\" ;
	schema:name \\"dot triples\\" .

<http://example.org/note/bob/Bob%20Details.md> dot:wikipath \\"bob/Bob Details\\" ;
	schema:name \\"Bob Details\\" .

<http://example.com> schema:name \\"Alias 2\\" .

<http://example3.com> schema:name \\"here\\" .

"
`;

exports[`triplify examples dot triples.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/dot%20triples.md> dot:wikipath \\"dot triples.md\\" ;
	schema:name \\"dot triples\\" ;
	a dot:Note ;
	dot:contains [
		dot:wikipath \\"dot triples.md\\" ;
		schema:name \\"Dot triples syntax\\" ;
		dot:selector \\"Dot triples syntax\\" ;
		rdf:type dot:Block ;
		dot:contains [
			dot:wikipath \\"dot triples.md\\" ;
			schema:name \\"Alice\\" ;
			dot:selector \\"Alice\\" ;
			rdf:type dot:Block ;
			<http://example.org/property/has> \\"37 years old\\" ;
			ex:knows <http://example.org/note/bob/Bob.md> ;
			dot:related <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md> ;
		], [
			dot:wikipath \\"dot triples.md\\" ;
			schema:name \\"Embedded\\" ;
			dot:selector \\"Embedded\\" ;
			rdf:type dot:Block ;
			<http://example.org/property/EA> \\"EB\\" ;
			<http://example.org/property/EC> \\"ED\\" ;
		] ;
	] .

<http://example.org/property/has> schema:name \\"has\\" .

<http://example.org/note/bob/Bob.md> dot:wikipath \\"Bob\\" ;
	schema:name \\"Bob\\" .

<http://example.org/note/Alice.md> dot:wikipath \\"Alice\\" ;
	schema:name \\"Alice\\" .

<http://example.org/property/A> schema:name \\"A\\" ;
	<http://example.org/property/B> \\"C\\" .

<http://example.org/property/B> schema:name \\"B\\" .

<http://example.org/property/EA> schema:name \\"EA\\" .

<http://example.org/property/EC> schema:name \\"EC\\" .

"
`;

exports[`triplify examples houses/BobHouse.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/note/houses/BobHouse.md> dot:wikipath \\"houses/BobHouse.md\\" ;
	a \\"House\\", dot:Note ;
	schema:name \\"BobHouse\\" .

"
`;

exports[`triplify examples houses/img.png 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .
"
`;
